fix: firefox overflow not working property on edit employee components

--- a/apps/gauzy/src/app/pages/employees/edit-employee/edit-employee-profile/edit-employee-employment/edit-employee-employment.component.scss
+++ b/apps/gauzy/src/app/pages/employees/edit-employee/edit-employee-profile/edit-employee-employment/edit-employee-employment.component.scss
@@ -18,7 +18,7 @@ $radius: nb-theme(border-radius);
 }
 :host {
   @include nb-card_overrides(
-    overlay,
+    auto,
     calc($default-card-height - 5rem),
     $default-radius
   );
